[tool.poetry]
name = "cosmos"
version = "0.1.0"
description = "Minimal distributed configuration management in python"
authors = ["James Delancey <jamesdelanceyjr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
